<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_article_textBody"
            android:layout_width="0dp"
            android:layout_height="260dp"
            android:contentDescription="@string/article_image"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_launcher_background" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="119dp"
            android:contentDescription="@string/back"
            android:onClick="back"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.041"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_keyboard_backspace_24"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@drawable/round_background"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/image_article_textBody"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_of_author"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/article_author"
                    app:srcCompat="@drawable/ic_launcher_background" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/author_textBody"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/author"
                        android:textColor="#7986cb"
                        android:textSize="16sp"
                        tools:ignore="RelativeOverlap" />

                    <TextView
                        android:id="@+id/date_article_textBody"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:text="@string/time" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/line"
                android:layout_width="212dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginTop="14dp"
                android:background="#000000" />
        </LinearLayout>

        <TextView
            android:id="@+id/textBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="#fff"
            android:lineSpacingExtra="4dp"
            android:paddingEnd="12dp"
            android:paddingBottom="8dp"
            android:text=""
            android:textColor="#696B6C"
            android:textIsSelectable="true"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
