<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".covidReport">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_420sdp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <Spinner
                android:id="@+id/sp_countries"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_18sdp"
                android:textColor="#ffffff" />

            <ImageView
                android:id="@+id/back_image"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_toStartOf="@+id/sp_countries"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:clickable="true"
                android:onClick="back"
                android:src="@drawable/ic_baseline_keyboard_backspace_24"
                android:contentDescription="@string/back"
                android:focusable="true" />


            <TextView
                android:id="@+id/tx_worldwide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sp_countries"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/worldwide"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tx_worldwide_number_deaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tx_worldwide"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/number"
                android:textColor="#FF0057"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tx_worldwide_number_deaths"
                android:layout_marginTop="@dimen/_18sdp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tx_cases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm"
                        android:textColor="#fff"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tx_worldwide_number_cases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/number"
                        android:textColor="#fff"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tx_recovered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recovered"
                        android:textColor="#fff"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tx_worldwide_number_recovered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/number"
                        android:textColor="#4CAF50"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@drawable/covid_background"
            app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/tx_death"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_56sdp"
                android:text="@string/death"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/death"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tx_death"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/number"
                android:textColor="#FF0057"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/death"
                android:layout_marginTop="@dimen/_28sdp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tx_country_cases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm"
                        android:textColor="#000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/cases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/number"
                        android:textColor="#000"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tx_country_recovered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recovered"
                        android:textColor="#000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/recovered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/number"
                        android:textColor="#4CAF50"
                        android:textSize="20sp" />
                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView_coronaVirus"
            android:layout_width="@dimen/_112sdp"
            android:layout_height="@dimen/_82sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:contentDescription="@string/covid_19"
            app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/icons8_coronavirus_96" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
